<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddTaskActivity">

    <TextView
            android:text="@string/new_task_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskCategory_AddTaskTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:paddingLeft="2dp"
            app:layout_constraintTop_toTopOf="@+id/taskCategory_AddTaskRadioGroup"
            app:layout_constraintBottom_toBottomOf="@+id/taskCategory_AddTaskRadioGroup"/>
    <TextView
            android:text="@string/new_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskName_AddTaskTextView"
            android:textSize="20sp"
            android:paddingLeft="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/taskName_AddTaskEditText"
            app:layout_constraintBottom_toBottomOf="@+id/taskName_AddTaskEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/taskName_AddTaskEditText"
            app:layout_constraintStart_toEndOf="@+id/taskName_AddTaskTextView"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/new_task_name_hint"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/taskCategory_AddTaskTextView"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:id="@+id/taskCategory_AddTaskRadioGroup"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout_AddTask">
        <RadioButton
                android:text="@string/category_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryWork_AddTaskRadioButton"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/category_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryShopping_AddTaskRadioButton"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/category_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryOther_AddTaskRadioButton"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/task_list_add_button"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:id="@+id/addTask_AddTaskButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_AddTaskButton"/>
    <Button
            android:text="@string/new_task_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_AddTaskButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/taskName_AddTaskEditText"
            android:id="@+id/linearLayout_AddTask">
        <TextView
                android:text="@string/new_task_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/taskDate_AddTaskTextView"
                android:layout_weight="1"
                android:textSize="20sp"
                android:paddingLeft="2dp"/>
        <TextView
                android:text="@string/new_task_date_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:id="@+id/dateChoosen_AddTaskTextView"
                android:layout_weight="1"
                android:textSize="22sp"/>
        <Button
                android:text="@string/new_task_date_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addDate_AddTaskButton"
                android:layout_weight="1"
                android:paddingLeft="2dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>