<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.TaskListActivity"
>
    <TextView
            android:text="@string/task_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/task_list_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addNewTask_Button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/addNewTask_Button" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/taskList_RecyclerView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:id="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
                android:text="@string/new_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskName_TextViewRowTitle"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/new_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskDate_TextViewRowTitle"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/new_task_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskCategory_TextViewRowTitle"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>