<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.EditTaskActivity"
        android:background="@color/colorBackground"
        android:focusableInTouchMode="true">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/editTask_EditTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" android:id="@+id/scrollView2">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:id="@+id/taskName_EditTaskTextView"
                    android:text="@string/new_task_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/taskName_EditTaskEditText"
                    app:layout_constraintBottom_toBottomOf="@+id/taskName_EditTaskEditText"
                    android:textColor="@android:color/white"
                    android:background="@drawable/task_list_row_title_background"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/taskName_EditTaskEditText"
                    app:layout_constraintStart_toEndOf="@+id/taskName_EditTaskTextView"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/linearLayout_EditTask" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/taskName_EditTaskEditText">
                <TextView
                        android:text="@string/new_task_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/taskDate_EditTaskTextView"
                        android:layout_weight="2"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:textColor="@android:color/white"
                        android:background="@drawable/task_list_row_title_background"/>
                <Button
                        android:text="@string/new_task_date_hint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editDate_EditTaskButton"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/choose_date_button_background"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>
            </LinearLayout>
            <TextView
                    android:text="@string/new_task_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskCategory_EditTaskTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/task_list_row_title_background"
                    app:layout_constraintTop_toTopOf="@+id/taskCategory_EditTaskRadioGroup"
                    app:layout_constraintBottom_toBottomOf="@+id/taskCategory_EditTaskRadioGroup"/>
            <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/taskCategory_EditTaskTextView"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/taskCategory_EditTaskRadioGroup"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout_EditTask">
                <RadioButton
                        android:text="@string/category_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoryWork_EditTaskRadioButton"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:buttonTint="@android:color/white"/>
                <RadioButton
                        android:text="@string/category_shopping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoryShopping_EditTaskRadioButton"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:buttonTint="@android:color/white"/>
                <RadioButton
                        android:text="@string/category_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoryOther_EditTaskRadioButton"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:buttonTint="@android:color/white"/>
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <Button
            android:text="@string/new_task_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/cancel_EditTaskButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/choose_date_button_background"
            app:layout_constraintTop_toBottomOf="@+id/deleteTask_EditTaskButton"/>
    <Button
            android:text="@string/edit_task_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteTask_EditTaskButton"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_EditTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:background="@drawable/cancel_button_background" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTask_EditTaskButton"/>
    <Button
            android:text="@string/edit_task_edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTask_EditTaskButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/add_task_button_background"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/deleteTask_EditTaskButton"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>
</android.support.constraint.ConstraintLayout>